# website-backend

./: .env.example  CHA-110-PROGRESS.md  CHA-123-PROGRESS.md  DEPLOYMENT.md  README.md  api-spec.md  init_db.py  main.py  pyproject.toml  pytest.ini  railway.toml
.github/workflows/: ci.yml
scripts/: generate_secret.py
src/: config.py  database.py  main.py
src/auth/: jwt_utils.py  middleware.py
src/models/: auth.py  chat.py  goal.py  mission.py  session.py
src/models/db/: db_models.py
src/prompt/: chat_prompt.py  goal.prompt.py  goal_prompt.py
src/routes/: auth.py  chat.py  goals.py  missions.py  session.py
src/services/: chat_service.py  cms.py  cms_example.py  default_services.py  dummyCms.py  goal_parser.py  history_manager.py  llm_services.py  message_service.py  mock_data.py  session_manager.py
src/utils/: errors.py  json_utils.py  llm_validation.py  retry.py
tests/: conftest.py  test_api_flow.py  test_auth.py  test_chat.py  test_error_resilience.py  test_goals.py  test_missions.py  test_services.py  test_session.py
