[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.1.1",
    # Database
    "greenlet>=3.0.0",
    "psycopg[binary,pool]>=3.2.9",
    "alembic>=1.13.0",
    "sqlmodel>=0.0.24",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    # HTTP
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    # AI/ML
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-litellm>=0.2.2",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
    "litellm>=1.74.15.post1",
    "openai>=1.98.0",
    "psycopg>=3.2.9",
    "langchain-postgres>=0.0.15",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    
    # Code Quality
    "black>=24.3.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pylint>=3.0.3",
    "types-python-jose>=3.3.4",
    "types-python-dateutil>=2.8.19.14",
    
    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.5",
]
